syntax = "proto3";

message ModelDescriptor {
  // string version = 1;
  repeated string types = 1;
  string path = 2;
  // string id = 4;
  repeated InputDescriptor inputs = 3;
  repeated OutputDescriptor outputs = 4;

  // runtime fields, not used to calculate hash
  // repeated float thresholds = 5;
  // bool local = 6;
  // repeated string peers = 7;
  // uint32 npeers = 8;
}
